2004-04-27  Jorn Baayen  <jbaayen@gnome.org>

	* src/Song.cs:

	Include album name in search key.

2004-04-26  Jorn Baayen  <jbaayen@gnome.org>

	* NEWS:
	* libmuine/player-xine.c: (load_audio_out_driver),
	(player_construct):

	Load audio driver from xine-config.

2004-04-25  Crispin Flowerday  <gnome@flowerday.cx>
            Jorn Baayen  <jbaayen@gnome.org>

	* libmuine/mm-keys.c: (mmkeys_class_init), (mmkeys_init),
	(filter_mmkeys):
	* src/MmKeys.cs:
	* src/PlaylistWindow.cs:

	Make the "Stop" multimedia key pause playback.

	(Did some general mmkey code cleanup --Jorn)

2004-04-25  Lee Willis  <lee@leewillis.co.uk>

	* data/muine.schemas.in:
	* src/CoverDatabase.cs:

	Add a GConf key for using different amazon backends.

2004-04-25  Crispin Flowerday  <gnome@flowerday.cx>

	* src/CoverDatabase.cs:

	Catch exceptions from the Pixbuf ctor.

2004-04-25  Jorn Baayen  <jbaayen@gnome.org>

	* src/Player.cs:

	Make seek reload the stream when it has been stopped.

2004-04-24  Jorn Baayen  <jbaayen@gnome.org>

	* src/Muine.cs:

	Start the changes thread *after* all covers have been loaded,
	to reduce the amount of disc seeking on startup.

2004-04-22  Jorn Baayen  <jbaayen@gnome.org>

	* src/FileUtils.cs:
	* src/Makefile.am:
	* src/Muine.cs:
	* src/PlaylistWindow.cs:
	* src/SongDatabase.cs:

	Split out filename peeking utilities to a separate class.

2004-04-21  Jorn Baayen  <jbaayen@gnome.org>

	* src/SongDatabase.cs:

	Support for removable media in /media, like on SuSE.

2004-04-21  Jorn Baayen  <jbaayen@gnome.org>

	* src/PlaylistWindow.cs:

	Call NSongsChanged in HandleRemovePlayedSongsCommand

2004-04-20  Jorn Baayen  <jbaayen@gnome.org>

	* src/CoverDatabase.cs:
	* src/ErrorDialog.cs:
	* src/Muine.cs:
	* src/PlaylistWindow.cs:
	* src/SongDatabase.cs:

	Prettier error dialogs.

2004-04-20  Jorn Baayen  <jbaayen@gnome.org>

	* configure.in:
	* libmuine/player-gst.c: (player_init), (player_construct),
	(player_new), (player_set_file), (player_get_volume):